remove historic use of subPath add functionality for triangulation